--- a/index.html
+++ b/index.html
@@ -4,124 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson 8</title>
+    <title>Lesson 9</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="C:\Users\Вика\Desktop\юля\site\less8\font-awesome">
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <div class="wrapper">
-        <div class="content">
-            <h1>Lesson 8</h1>
-            <section class="font">
-                <h2 class="text__title title">Font Awesome + transition</h2>
-                <div class="font__icons">
-                    <ul class="fa-ul">
-                        <li><span class="fa-li"><i class="fa-li fa fa-check-square"></i></span>Marvel</li>
-                        <li><span class="fa-li"><i class="fa-li fa fa-spinner fa-spin"></i></span>DC</li>
-                        <li><span class="fa-li"><i class="fa-li fa fa-square"></i></span>Starwars</li>
-                      </ul>
-                </div>
-                <p>Наведи на синий блок и узри магию <strong>transition</strong>.</p>
-            </section>
-            <section class="animation">
-                <h2 class="text__title title">Transform</h2>
-                <div class="animation__block">
-                    <div class="block__element"></div>
-                    <div class="block__element"></div>
-                    <div class="block__element"></div>
-                </div>
-                <p><strong>Transforms & keyframes</strong> в действии.</p>
-            </section>
-            <section class="background">
-                <h2 class="text__title title">CSS Background</h2>
-                <div class="background__image"></div>
-                <p>Выставляем картинку через <strong>CSS</strong> свойство <strong>background</strong></p>
-            </section>
-            <section class="text">
-                <h2 class="text__title title">Images ( HTML Picture )</h2>
-                <div class="text__image">
-                    <picture>
-                        <source srcset="img\marvel.jpg" media="(min-width:1330px)">
-                        <source srcset="img\dc.jpg" media="(min-width:992px)">
-                        <source srcset="img\starwars.jpg" media="(max-width:992px)">
-                        <img src="img\sr.jpg" alt="">
-                    </picture>
-                </div>
-                <p>Использование тега <strong>picture</strong> для отображения нужной картинке на нужном разрешении</p>
-                <p>Открой эту страницу на <strong>разных девайсах</strong> и посмотри на результат</p>
-            </section>
-            <section class="cards">
-                <h2 class="text__title title ">Universes ( HTML object-fit )</h2>
-                <div class="cards__row">
-                    <div class="cards__column">
-                        <div class="cards__item">
-                            <div class="cards__image">
-                                <img src="img\starwars.jpg" alt="">
-                            </div>
-                            <div class="cards__body">
-                                <p>Здесь кроется картинка с разрешением <strong>300*181</strong></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="cards__column">
-                        <div class="cards__item">
-                            <div class="cards__image">
-                                <img src="img\dc.jpg" alt="">
-                            </div>
-                            <div class="cards__body">
-                                <p>Здесь кроется картинка с разрешением <strong>700*350</strong></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="cards__column">
-                        <div class="cards__item">
-                            <div class="cards__image">
-                                <img src="img\marvel.jpg" alt="">
-                            </div>
-                            <div class="cards__body">
-                                <p>Здесь кроется картинка с разрешением <strong>1920*1035</strong></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="items">
-                <h2 class="items__title title">Universes in a row</h2>
-                <div class="items__item">
-                    <div class="items__image">
-                        <img src="img\marvel.jpg" alt="">
-                    </div>
-                    <div class="items__body">
-                        <div class="items__label">Marvel</div>
-                        <div class="items__text">
-                            Marvel aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-                        </div>
-                </div>
-                <div class="items__item">
-                    <div class="items__image">
-                        <img src="img\dc.jpg" alt="">
-                    </div>
-                    <div class="items__body">
-                        <div class="items__label">DC</div>
-                        <div class="items__text">
-                            DC aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-                            aaaaaaaaaaaaaaaaaaaaaaaaaa
-                        </div>
-                    </div>
-                </div>
-                <div class="items__item">
-                    <div class="items__image">
-                        <img src="img\starwars.jpg" alt="">
-                    </div>
-                    <div class="items__body">
-                        <div class="items__label">Starwars</div>
-                        <div class="items__text">
-                            Star wars aaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-                        </div>
-                    </div>
-                </div>
-            </section>
+    <div class="header">
+        <div class="container">
+            <div class="nav">
+            <div class="logo">Startup</div>
+            <div>
+                <ul class="menu">
+                    <li class="menu-btn">Home</li>
+                    <li class="menu-btn">Services</li>
+                    <li class="menu-btn">About</li>
+                    <li class="menu-btn">Works</li>
+                    <li class="menu-btn">Blog</li>
+                    <li class="menu-btn">Clients</li>
+                    <li class="menu-btn">Contact</li>
+                </ul>
+            </div>
+        </div>
+            <div class="header__inner">
+                <h1>Welcome to STARTUP</h1>
+                <p>Your Favourite Creative Agency Template</p>
+                <div class="btn">GET STARTED</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="block__services">
+        <div class="container">
+            <div class="services">
+                <h2>SERVICES</h2>
+                <hr>
+                <p>We offer ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
+            <ul class="fa-ul">
+                <li><span class="fa-li"><i class="fa fa-font"></i></span>CLEAN TYPOGRAPHY</li>
+                <li><span class="fa-li"><i class="fa fa-code"></i></span>ROCK SOLID CODE</li>
+                <li><span class="fa-li"><i class="fa fa-life-ring"></i></span>EXPERT SUPPORT</li>
+            </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="container">
+        <div class="footer__top">
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-twitter"></i>
+        </div>
+        <div class="footer__bottom">
+            <i class="fa fa-copyright" aria-hidden="true"></i>
+        </div>
         </div>
     </div>
 </body>
-</html>
+</html> 
