--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson 9</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../less9/font-awesome-4.7.0/font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="header">
         <div class="container">
             <div class="nav">
-            <div class="logo">Startup</div>
+            <div class="logo"><strong>Startup</strong></div>
             <div>
                 <ul class="menu">
                     <li class="menu-btn">Home</li>
@@ -44,10 +44,18 @@
                 <li><span class="fa-li"><i class="fa fa-code"></i></span>ROCK SOLID CODE</li>
                 <li><span class="fa-li"><i class="fa fa-life-ring"></i></span>EXPERT SUPPORT</li>
             </ul>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur 
+                adipisicing elit.
+            </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur 
+                adipisicing elit.
+            </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur 
+                adipisicing elit.
+            </p>
             </div>
         </div>
     </div>
-
     <div class="footer">
         <div class="container">
         <div class="footer__top">
