--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson 9</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="../less9/font-awesome-4.7.0/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../less9/font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="header">
