--- a/index.html
+++ b/index.html
@@ -4,70 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson 9</title>
+    <title>Lesson 11. Position</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="../less9/font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <div class="header">
-        <div class="container">
-            <div class="nav">
-            <div class="logo"><strong>Startup</strong></div>
-            <div>
-                <ul class="menu">
-                    <li class="menu-btn">Home</li>
-                    <li class="menu-btn">Services</li>
-                    <li class="menu-btn">About</li>
-                    <li class="menu-btn">Works</li>
-                    <li class="menu-btn">Blog</li>
-                    <li class="menu-btn">Clients</li>
-                    <li class="menu-btn">Contact</li>
-                </ul>
-            </div>
-        </div>
-            <div class="header__inner">
-                <h1>Welcome to STARTUP</h1>
-                <p>Your Favourite Creative Agency Template</p>
-                <div class="btn">GET STARTED</div>
-            </div>
-        </div>
-    </div>
-
-    <div class="block__services">
-        <div class="container">
-            <div class="services">
-                <h2>SERVICES</h2>
-                <hr>
-                <p>We offer ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
-            <ul class="fa-ul">
-                <li><span class="fa-li"><i class="fa fa-font"></i></span>CLEAN TYPOGRAPHY</li>
-                <li><span class="fa-li"><i class="fa fa-code"></i></span>ROCK SOLID CODE</li>
-                <li><span class="fa-li"><i class="fa fa-life-ring"></i></span>EXPERT SUPPORT</li>
-            </ul>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur 
-                adipisicing elit.
-            </p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur 
-                adipisicing elit.
-            </p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur 
-                adipisicing elit.
-            </p>
-            </div>
-        </div>
-    </div>
-    <div class="footer">
-        <div class="container">
-        <div class="footer__top">
-            <i class="fa fa-twitter"></i>
-            <i class="fa fa-twitter"></i>
-            <i class="fa fa-twitter"></i>
-            <i class="fa fa-twitter"></i>
-        </div>
-        <div class="footer__bottom">
-            <i class="fa fa-copyright" aria-hidden="true"></i>
-        </div>
-        </div>
-    </div>
+    <div class="box box1">position: static</div>
+    <div class="box box2">position: relative</div>
+    <div class="box box3">position: absolute</div>
+    <div class="box box4">position: fixed</div>
+    <div class="box box5">position: sticky</div>
+    <div class="box">position: static</div>
+    <div class="box">position: static</div>
+    <div class="box">position: static</div>
+    <div class="box">position: static</div>
+    <div class="box">position: static</div>
+    <div class="box">position: static</div>
+    <div class="box">position: static</div>
+    <div class="box">position: static</div>
+    <div class="box">position: static</div>
+    <div class="box">position: static</div>
+    <p><strong>Japan flag</ptrong></p>
+    <div class="box box14"><div id="circle"></div></div>
 </body>
-</html> 
+</html>
