--- a/less22/index.html
+++ b/less22/index.html
@@ -24,9 +24,7 @@
         <div class="child5">
             <p>Contacts</p>
         </div>
-    </div>
     <hr></hr>
-    <div class="boxes">
         <div class="box1">
             <p>Denis Novik</p>
         </div>
@@ -38,6 +36,18 @@
             <p>RU | ENG</p>
         </div>
     </div>
-  <img src="https://images.unsplash.com/profile-1530374976725-ec88d489b2db?ixlib=rb-1.2.1&q=80&fm=jpg&crop=faces&cs=tinysrgb&fit=crop&h=128&w=128" alt="#">
+    <div class="print-logo">
+        <img src="https://static.remove.bg/remove-bg-web/59c96072ccf69a79c0e6dd85a2eac05ceb4d0784/assets/start-1abfb4fe2980eabfbbaaa4365a0692539f7cd2725f324f904565a9a744f8e214.jpg" alt="#">
+    </div>
+    <div class="container">
+        <div class="header">
+            <p><strong>About me</strong></p>
+        </div>
+        <div class="bottom">
+            <p>Hi, I'm Denis – UX/UI designer from Minsk. I'm interested in design and everything connected with it.</p>
+            <p>I'm studying at courses "Web and mobile design interfaces" in IT-Academy.</p>
+            <p>Ready to implement excellent projects with wonderful people.</p>
+        </div>
+    </div>
 </body>
 </html>
