--- a/less22/index.html
+++ b/less22/index.html
@@ -49,5 +49,8 @@
             <p>Ready to implement excellent projects with wonderful people.</p>
         </div>
     </div>
+    <div class="logo">
+        
+    </div>
 </body>
 </html>
