--- a/less22/index.html
+++ b/less22/index.html
@@ -49,8 +49,10 @@
             <p>Ready to implement excellent projects with wonderful people.</p>
         </div>
     </div>
-    <div class="logo">
-        
+    <div class="footer">
+        <div class="logo">
+            <p><strong>Skills</strong></p>
+        </div>
     </div>
 </body>
 </html>
